package io.deephaven.javascript.proto.dhinternal.io.deephaven.proto.session_pb_service;

import jsinterop.annotations.JsOverlay;
import jsinterop.annotations.JsPackage;
import jsinterop.annotations.JsProperty;
import jsinterop.annotations.JsType;
import jsinterop.base.Js;
import jsinterop.base.JsPropertyMap;

@JsType(
    isNative = true,
    name = "dhinternal.io.deephaven.proto.session_pb_service.SessionService",
    namespace = JsPackage.GLOBAL)
public class SessionService {
  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface CloseSessionType {
    @JsOverlay
    static SessionService.CloseSessionType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface ExportNotificationsType {
    @JsOverlay
    static SessionService.ExportNotificationsType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface NewSessionType {
    @JsOverlay
    static SessionService.NewSessionType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface RefreshSessionTokenType {
    @JsOverlay
    static SessionService.RefreshSessionTokenType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface ReleaseType {
    @JsOverlay
    static SessionService.ReleaseType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  public static SessionService.CloseSessionType CloseSession;
  public static SessionService.ExportNotificationsType ExportNotifications;
  public static SessionService.NewSessionType NewSession;
  public static SessionService.RefreshSessionTokenType RefreshSessionToken;
  public static SessionService.ReleaseType Release;
  public static String serviceName;
}
